# shopping-cart

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  init_db.py  populate_db.py  pyproject.toml  wait-for-db.sh
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  service.py
domain/: repo_interfaces.py  service.py
infrastructure/: database.py  repository.py
schemas/: cart.py  item.py
tests/: test_api_calls.py  test_get_items.py
